--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -79,10 +79,10 @@
                         <li role="presentation"><a role="menuitem" tabindex="-1" class="postorius" href="{{ postorius_installed }}">{% trans 'Manage lists' %}</a></li>
                         {% endif %}
                         {% if use_internal_auth %}
-                        <li role="presentation"><a role="menuitem" tabindex="-1" class="mm_user" href="{% url 'hk_user_login' %}?next={{next|default:request.path|urlencode}}">{% trans "Login" %}</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" class="mm_user" href="{{ login_url }}?next={{next|default:request.path|urlencode}}">{% trans "Login" %}</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'hk_user_registration' %}?next={{next|default:request.path|urlencode}}">{% trans "Sign Up" %}</a></li>
                         {% else %}
-                        <li role="presentation"><a role="menuitem" tabindex="-1" class="mm_logout" href="{% url 'hk_user_logout' %}?next={% url 'hk_root' %}">{% trans "Logout" %}</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" class="mm_logout" href="{{ logout_url }}?next={% url 'hk_root' %}">{% trans "Logout" %}</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'hk_user_profile' %}">{{ user.username|truncatechars:"35" }}</a></li>
                         {% endif %}
                     </ul>
@@ -91,10 +91,10 @@
                 <!-- show regular list items for larger viewports (no dropdown)-->
                 <ul class="nav navbar-nav navbar-right auth">
                     {% if user.is_authenticated %}
-                        <li><a class="mm_logout hidden-sm" href="{% url 'hk_user_logout' %}?next={% url 'hk_root' %}">{% trans "Logout" %}</a></li>
+                        <li><a class="mm_logout hidden-sm" href="{{ logout_url }}?next={% url 'hk_root' %}">{% trans "Logout" %}</a></li>
                         <li><a class="hidden-sm" href="{% url 'hk_user_profile' %}">{{ user.username|truncatechars:"35" }}</a></li>
                     {% else %}
-                        <li><a class="mm_user {% if use_internal_auth %}hidden-sm{% endif %}" href="{% url 'hk_user_login' %}?next={{next|default:request.path|urlencode}}">{% trans "Login" %}</a></li>
+                        <li><a class="mm_user {% if use_internal_auth %}hidden-sm{% endif %}" href="{{ login_url }}?next={{next|default:request.path|urlencode}}">{% trans "Login" %}</a></li>
                         {% if use_internal_auth %}
                         <li><a class="hidden-sm" href="{% url 'hk_user_registration' %}?next={{next|default:request.path|urlencode}}">{% trans "Sign Up" %}</a></li>
                         {% endif %}
