Threads lists: choose the number of results per page

--- a/hyperkitty/static/hyperkitty/less/hyperkitty-threadslist.less
+++ b/hyperkitty/static/hyperkitty/less/hyperkitty-threadslist.less
@@ -25,6 +25,10 @@
 
 #thread-list .paginator {
     text-align: center;
+    form {
+        display: inline-block;
+        margin: 0 auto;
+    }
 }
 
 #thread-list .thread {
