Fix translated messages

--- a/hyperkitty/templates/hyperkitty/messages/message.html
+++ b/hyperkitty/templates/hyperkitty/messages/message.html
@@ -15,7 +15,7 @@
                 <span class="name">
                     {% if email.sender.mailman_id %}
                     <a href="{% url 'hk_public_user_profile' user_id=email.sender.mailman_id %}"
-                       title="{% trans 'See the profile for {{ email.sender.name|escapeemail|escape }}' %}"
+                       title="{% blocktrans with name=email.sender.name|escapeemail|escape %}See the profile for {{ name }}{% endblocktrans %}"
                        >{{email.sender.name|default:"(no name)"|escapeemail}}</a>
                     {% else %}
                        {{email.sender.name|default:"(no name)"|escapeemail}}
