--- a/hyperkitty/templates/hyperkitty/threads/right_col.html
+++ b/hyperkitty/templates/hyperkitty/threads/right_col.html
@@ -89,7 +89,7 @@
         <ul class="list-unstyled">
             {% for participant in thread.participants|sort_by_name %}
             <li class="row">
-                <div class="participant-gravatar col-tn-2 col-sm-4 col-md-2">{% gravatar participant.email 48 %}</div>
+                <div class="participant-gravatar col-tn-2 col-sm-4 col-md-2">{% gravatar participant.address 48 %}</div>
                 <div class="participant-name col-tn-8">{{ participant.name|escapeemail }}</div>
             </li>
             {% endfor %}
