--- a/hyperkitty/static/hyperkitty/less/hyperkitty-overview.less
+++ b/hyperkitty/static/hyperkitty/less/hyperkitty-overview.less
@@ -9,9 +9,12 @@
     }
 
     .searchbar,
-    .thread-new {
+    .list-actions {
         padding-top: 1em;
         padding-bottom: 1em;
+    }
+    .list-actions > a {
+        margin-bottom: 0.2em;
     }
 
     .anchor-link {
@@ -211,7 +214,7 @@
             text-align: left;
         }
     }
-    .thread-new {
+    .searchbar {
         text-align: right;
     }
     .overview .back-to-top {
@@ -220,7 +223,7 @@
 }
 // xs screen (540-768px): add back-to-top link
 @media (max-width: @screen-xs-max) and (min-width: 540px) {
-    .overview .thread-new {
+    .overview .searchbar {
         text-align: right;
     }
 }
@@ -233,7 +236,7 @@
 // thread titles now only take up 1 line max;
 @media (min-width: @screen-sm) {
     .overview {
-        .thread-new {
+        .list-actions {
             padding-top: 0;
         }
         .thread .thread-title {
