--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -62,6 +62,18 @@
 
         <div class="row">
             <a id="home"></a>
+            <div class="list-actions col-tn-6 col-sm-4" {% if not user.is_authenticated %}title="{% trans 'You must be logged-in to create a thread.' %}"{% endif %}>
+                <a href="{% url "hk_message_new" mlist_fqdn=mlist.name %}"
+                    class="btn btn-default{% if not user.is_authenticated %} disabled{% endif %}">
+                    <i class="fa fa-plus"></i>
+                    <span class="hidden-tn hidden-xs">Start a n</span><span class="hidden-sm hidden-md hidden-lg">N</span>ew thread
+                </a>
+                {% if postorius_installed %}
+                <a class="btn btn-default" href="{{ postorius_installed }}/{{ mlist.name }}">
+                  <i class="fa fa-inbox"></i>
+                  Subscribe<span class="hidden-tn hidden-xs"> to this list</span></a>
+                {% endif %}
+            </div>
             <form name="search" method="get" action="{% url 'hk_search' %}" class="searchbar col-tn-8 col-xs-4 hidden-sm hidden-md hidden-lg" role="search">
                 {% if mlist %}<input type="hidden" name="list" value="{{ mlist.name }}" />{% endif %}
                 <input id="nav-tab-search" name="query" type="text" class="form-control"
@@ -69,13 +81,6 @@
                        {% if query %}value="{{ query }}"{% endif %}
                        />
             </form>
-            <div class="thread-new col-tn-6 col-sm-4" {% if not user.is_authenticated %}title="{% trans 'You must be logged-in to create a thread.' %}"{% endif %}>
-                <a href="{% url "hk_message_new" mlist_fqdn=mlist.name %}"
-                    class="btn btn-default{% if not user.is_authenticated %} disabled{% endif %}">
-                    <i class="fa fa-plus"></i>
-                    <span class="hidden-tn hidden-xs">Start a n</span><span class="hidden-sm hidden-md hidden-lg">N</span>ew thread
-                </a>
-            </div>
         </div> <!-- /container, navbar & search (tiny/xs screens), new thread button -->
     </div> <!-- /container, title/description + the elements above -->
 
