Display links to the profile on the most active posters list

--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -184,7 +184,15 @@
                 </div>
                 <div class="gravatar-details inline-block col-tn-7 col-xs-6 col-md-7">
                     <ul class="list-unstyled">
-                        <li><span class="maker-name">{{ poster.name }}</span></li>
+                        <li><span class="maker-name">
+                            {% if poster.mailman_id %}
+                            <a href="{% url 'hk_public_user_profile' user_id=poster.mailman_id %}"
+                               title="{% trans "See the profile" %}"
+                                >{{ poster.name|escapeemail }}</a>
+                            {% else %}
+                                {{ poster.name|escapeemail }}
+                            {% endif %}
+                        </span></li>
                         <li><span class="score">{{ poster.count }}</span> {% trans "posts" %}</li>
                     </ul>
                 </div>
