Rename the 'subscribe' buttons to be more clear

--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -71,7 +71,7 @@
                 {% if postorius_installed %}
                 <a class="btn btn-default" href="{{ postorius_installed }}/{{ mlist.name }}">
                   <i class="fa fa-inbox"></i>
-                  Subscribe<span class="hidden-tn hidden-xs"> to this list</span></a>
+                  <span class="hidden-tn hidden-xs">Manage s</span><span class="hidden-sm hidden-md hidden-lg">S</span>ubscription</a>
                 {% endif %}
             </div>
             <form name="search" method="get" action="{% url 'hk_search' %}" class="searchbar col-tn-8 col-xs-4 hidden-sm hidden-md hidden-lg" role="search">
