--- a/hyperkitty/templates/hyperkitty/threads/right_col.html
+++ b/hyperkitty/templates/hyperkitty/threads/right_col.html
@@ -31,7 +31,7 @@
     <p>
       <a class="btn btn-default btn-sm" href="{{ postorius_installed }}/{{ mlist.name }}">
         <i class="fa fa-inbox"></i>
-        Subscribe to this list</a>
+        Manage subscription</a>
     </p>
     {% endif %}
 
