--- a/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
+++ b/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
@@ -18,7 +18,7 @@
                 </a>
             </span>
             <span class="thread-date"
-                  title="{{ thread.date_active|date:"l, j F Y H:i:s" }}">
+                  title="{{ thread.date_active|date:'l, j F Y H:i:s' }}">
                 {{ thread.date_active|timesince }}
             </span>
             <div class="thread-info row">
