--- a/hyperkitty/templates/hyperkitty/index.html
+++ b/hyperkitty/templates/hyperkitty/index.html
@@ -1,6 +1,7 @@
 {% extends "hyperkitty/base.html" %}
 {% load i18n %}
 {% load hk_generic %}
+{% load staticfiles %}
 
 
 {% block title %}
@@ -130,7 +131,7 @@
                         <span class="list-description">{{ mlist.description|default_if_none:"" }}</span>
                         <span class="list-address hidden">{{ mlist.name }}</span>
                         <div class="chart">
-                            <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{{ STATIC_URL }}hyperkitty/img/ajax-loader.gif" />
+                            <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{% static 'hyperkitty/img/ajax-loader.gif' %}" />
                         </div>
                         <ul class="list-stats list-unstyled">
                             <li>
@@ -214,7 +215,7 @@
                     </td>
                     <td class="activity">
                         <div class="chart">
-                            <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{{ STATIC_URL }}hyperkitty/img/ajax-loader.gif" />
+                            <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{% static 'hyperkitty/img/ajax-loader.gif' %}" />
                         </div>
                         <ul class="list-stats list-unstyled">
                             <li>
@@ -250,7 +251,7 @@
 </div> <!-- /row, for lists -->
 
 <div class="row">
-    <img class="logo col-tn-offset-2 col-xs-offset-3 col-sm-offset-4 col-md-offset-4 col-lg-offset-5" alt="HyperKitty" src="{{STATIC_URL}}hyperkitty/img/logo.png" />
+    <img class="logo col-tn-offset-2 col-xs-offset-3 col-sm-offset-4 col-md-offset-4 col-lg-offset-5" alt="HyperKitty" src="{% static 'hyperkitty/img/logo.png' %}" />
 </div>
 
 </div> <!-- /all-lists, outer-wrapper -->
