--- a/hyperkitty/templates/hyperkitty/ajax/votes.html
+++ b/hyperkitty/templates/hyperkitty/ajax/votes.html
@@ -33,6 +33,7 @@
                     </td>
                 </tr>
             {% endfor %}
+            </tbody>
         </table>
         <table class="table table-striped table-bordered table-condensed hidden-tn hidden-xs">
             <thead>
